URI.path one character short after redirect involving fragment. b=438288 r+sr=cbiesinger a=ss